<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jipark.memorycache.CreateMemoryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="265dp">

                <android.support.v7.widget.CardView
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:alpha="0.6"
                        android:id="@+id/image_holder_text"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_image"/>

                    <ProgressBar
                        android:visibility="invisible"
                        android:layout_gravity="center"
                        android:id="@+id/image_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:contentDescription="@string/image_holder"
                        android:id="@+id/image_holder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </android.support.v7.widget.CardView>

                <android.support.design.widget.FloatingActionButton
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/add_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_insert_photo_white_24dp"
                    android:layout_margin="16dp" />
            </RelativeLayout>

            <!--<View-->
                <!--android:id="@+id/divider"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@android:color/darker_gray" />-->

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                card_view:cardCornerRadius="4dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_margin="8dp"
                    android:id="@+id/description_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:lines="6"
                        android:maxLines="6"
                        android:gravity="start"
                        android:id="@+id/description_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:hint="@string/description"/>

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_gravity="bottom | end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp">

                    <Button
                        android:theme="@style/PrimaryFlatButton"
                        android:id="@+id/cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:layout_gravity="bottom"/>

                    <Button
                        android:theme="@style/PrimaryFlatButton"
                        android:id="@+id/create_memory_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_memory"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
